2003-05-13 Tom Copeland <tom@infoether.com>

	* cronjobs/project_weekly_metric.php:
	Cleaning up the SQL; it was doing INSERTs into a table that wasn't
	getting created.  Thanks to Bruce Forsyth for the report.

2003-05-07  Reinhard Spisser <reinhard@spisser.it>

	* www/forum/forum.php:
	fix bug #214: Forums: next 50 and previous 50 on W2000

	* www/themes/gforge/it_login.png, www/themes/gforge/it_logout.png,
	www/themes/gforge/it_my_account.png, www/themes/gforge/it_newaccount.png
	www/include/languages/Base.tab:
	new italian icons for gforge theme, some more translations
		
2003-05-06 Tom Copeland <tom@infoether.com>

	* www/soap/SoapAPI.php:
	Added a few new methods - getNumberOfProjects, getNumberOfUsers

	* contrib/soapclients/java:
	Added an initial Java SOAP client implementation

	* common/include/GForge.class:
	A new class with some utility methods to get the number of users
	and projects hosted by a GForge server.

	* www/include/features_boxes.php:
	Refactoring some SQL into the new GForge.class.

	* www/forum/admin/index.php, common/forum/ForumFactory.class:
	Fixed bug #327: Add problems when you don't have forums
	
	* cronjobs/cvs-cron/usergroup.php:
	Fixed bug #262: First line of CVS cron .php files need "-q" to prevent cron mail on clean runs

2003-05-02  Reinhard Spisser <reinhard@spisser.it>

	* www/pm/include/ProjectTaskHTML.class,
	common/pm/ProjectTask.class:
	bug 319: warning in task manager

	* www/include/languages/Italian.tab:
	translations

2003-05-01 Tom Copeland <tom@infoether.com>
	
	* www/mail/admin/index.php: 
	Bug 323: Link to "administrate this list" was hardcoded HTTPS

	* www/admin/grouplist.php: 
	RFE #179: Groups & users list sortable

	* www/snippet/add_snippet_to_package.php: 
	RFE #305: Adding code snippet to code snippet package

2003-04-28  Reinhard Spisser	<reinhard@spisser.it>

	* common/include/utils.php:
	bug 52: Path to sendmail is hardcoded

	* www/top/index.php:
	bug 70: commented links to not-working stats pages
